Fix widows on mobile sizes
Caught for iPhoneX and Pixel 2. Addresses review feedback

--- a/src/css/alerts.less
+++ b/src/css/alerts.less
@@ -10,4 +10,12 @@
     background-color: @error-color;
     color: @white;
     padding: 8px;
+
+    @media only screen and (min-width: 366px) and (max-width: 378px) {
+        padding: 8px 15px;
+    }
+
+    @media only screen and (min-width: 709px) and (max-width: 757px) {
+        padding: 8px 30px;
+    }
 }
